# agents-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  Makefile  README.md  SECURITY.md  package.json  researchcomputer-agents-sdk-0.2.0.tgz  tsconfig.base.json  tsconfig.core.json  tsconfig.json  tsconfig.lint.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: ci.yml  publish.yml  python.yml
docs/: README.md  api-reference.md  concepts.md  embedding-core.md  examples.md  getting-started.md  integrations.md  publishing.md  snapshot-fork.md
docs/plans/: 2026-04-24-core-concurrency.md  2026-04-24-node-sandbox-hardening.md  2026-04-24-python-sdk-fixes.md  2026-04-24-repo-docs-repair.md  2026-04-24-telemetry-privacy.md  2026-04-24-test-quality-ci.md
docs/spec/: README.md  VERSIONS.md  wasm.md
docs/spec/prose/: hook-result.md  hooks.md  mcp-server.md  memory.md  permissions.md  session.md  tool-schema.md  trajectory-event.md
docs/spec/schemas/: hook-post-compact.v1.schema.json  hook-post-tool-use.v1.schema.json  hook-pre-compact.v1.schema.json  hook-pre-tool-use.v1.schema.json  hook-result.v1.schema.json  hook-session-end.v1.schema.json  hook-session-start.v1.schema.json  hook-stop.v1.schema.json  hook-subagent-start.v1.schema.json  hook-subagent-stop.v1.schema.json  mcp-server.v1.schema.json  memory.v1.schema.json  permissions.v1.schema.json  session.v1.schema.json  tool-schema.v1.schema.json  (+1 more)
examples/: _model.ts  auto-fork.ts  cost-budget.ts  custom-endpoint.ts  custom-tool.ts  fork-best-of-n.ts  fork-from-snapshot.ts  hooks.ts  mcp-integration.ts  memory-and-session.ts  quickstart.ts  read-only.ts  snapshot-restore.ts  swarm.ts  tsconfig.json
scripts/: build-sha256.ts  bump-python-version.mjs  copy-spec.ts  prepublish-guard.ts  test-tarball-install.sh
src/core/: auto-fork.test.ts  auto-fork.ts  errors.test.ts  errors.ts  extra-system.test.ts  factory.ts  index.ts  skills.test.ts  skills.ts  types.test.ts  types.ts
src/node/: doc-verify.test.ts  factory-auth.test.ts  factory-phase3.test.ts  factory-redact.test.ts  factory-resume.test.ts  factory-swarm.test.ts  factory-trajectory.test.ts  factory.test.ts  factory.ts  fork.test.ts  index.ts
src/python/: .gitignore  README.md  pyproject.toml
src/python/examples/: hello.py  memory.py  tool_chain.py
src/python/flash_agents/: __init__.py  _events.py  agent.py  errors.py
src/python/flash_agents/llm/: __init__.py  client.py  message_translate.py  openai_compat.py
src/python/flash_agents/mcp/: __init__.py
src/python/flash_agents/memory/: __init__.py  filesystem.py  retrieve.py  types.py
src/python/flash_agents/tools/: __init__.py  base.py  context.py  registry.py  schema.py
src/python/flash_agents/wasm/: __init__.py  host.py
src/python/tests/e2e/: conftest.py  mock_server.py  test_component_loads.py  test_concurrent_agents.py  test_memory_injection.py  test_multi_turn.py  test_one_turn.py  test_tool_async_io.py  test_tool_call.py
src/python/tests/unit/: test_filesystem_memory.py  test_mcp_registration_warning.py  test_openai_compat.py  test_retrieve.py  test_tool_class.py  test_tool_decorator.py  test_wasm_host_sha.py
src/python/wasm-guest/: adapters.ts  agent-events.ts  bun-build.ts  entrypoint.ts  llm-bridge.ts  tsconfig.wasm.json  wit-imports.d.ts
src/python/wasm-host/: Cargo.toml  README.md  pyproject.toml
src/python/wasm-host/src/: agent.rs  bindings.rs  host_llm.rs  host_tools.rs  lib.rs  state.rs
src/python/wit/: world.wit
(+182 files in other folders)
