[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "flash-agents"
version = "0.1.0"
description = "Python SDK for researchcomputer/agents-sdk — runs the WASM-componentized agent core from pure Python."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Research Computer" }]
dependencies = [
  "wasmtime>=25.0",
  "aiohttp>=3.9",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["flash_agents"]

[tool.hatch.build.targets.wheel.force-include]
"flash_agents/wasm/core.wasm" = "flash_agents/wasm/core.wasm"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
