[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "flash-agents-wasm"
version = "0.1.0"
requires-python = ">=3.11"
description = "Rust host extension that drives flash-agents core.wasm (used internally by flash-agents)"
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flash_agents_wasm"
